lib/src/snapshots/gql_safeguard_lib__registry__tests__registry_from_all_fixtures.snap
---
source: lib/src/registry.rs
expression: formatted
---
GraphQL Registry
├── Queries (12)
|   ├── AdditionalQueryEdgeCase (fixtures/edge_cases/additional-queries.ts)
|   |   └── Fields:
|   |       ├── user
|   |       ├── id
|   |       └── importedField [ThrowOnFieldError ⚠️]
|   ├── BaseQueryDynamic (fixtures/edge_cases/dynamic_imports.tsx)
|   |   ├── Directives:
|   |   |   └── Catch 🧤
|   |   └── Fields:
|   |       ├── user
|   |       ├── id
|   |       ├── name
|   |       └── dynamicField [ThrowOnFieldError ⚠️]
|   ├── CircularQueryTest (fixtures/edge_cases/circular_fragments.ts)
|   |   ├── Fields:
|   |   |   └── user
|   |   └── Fragment Spreads:
|   |       └── FragmentACircular
|   ├── GetFullUser (fixtures/valid/nested_fragments_protected.ts)
|   |   ├── Fields:
|   |   |   └── user
|   |   └── Fragment Spreads:
|   |       └── UserDetails
|   ├── GetFullUserUnprotected (fixtures/invalid/unprotected_nested.ts)
|   |   ├── Fields:
|   |   |   └── user
|   |   └── Fragment Spreads:
|   |       └── UserDetailsUnprotected
|   ├── GetUserProfile (fixtures/valid/query_with_catch.tsx)
|   |   ├── Directives:
|   |   |   └── Catch 🧤
|   |   └── Fields:
|   |       ├── user
|   |       ├── id
|   |       ├── name
|   |       ├── avatar [ThrowOnFieldError ⚠️]
|   |       └── email
|   ├── GetUserProfileUnprotected (fixtures/invalid/missing_catch.tsx)
|   |   └── Fields:
|   |       ├── user
|   |       ├── id
|   |       ├── name
|   |       ├── avatar [ThrowOnFieldError ⚠️]
|   |       └── email
|   ├── GetUserWithRiskyData (fixtures/valid/fragment_level_catch.ts)
|   |   ├── Directives:
|   |   |   └── Catch 🧤
|   |   ├── Fields:
|   |   |   ├── user
|   |   |   ├── id
|   |   |   ├── name
|   |   |   └── friends [ThrowOnFieldError ⚠️]
|   |   └── Fragment Spreads:
|   |       └── RiskyUserData
|   ├── GraphQLQuery (fixtures/edge_cases/additional-queries.ts)
|   |   ├── Directives:
|   |   |   └── Catch 🧤
|   |   └── Fields:
|   |       ├── user
|   |       ├── id
|   |       └── protectedField [ThrowOnFieldError ⚠️]
|   ├── MixedQuery (fixtures/invalid/partial_protection.ts)
|   |   ├── Fields:
|   |   |   ├── user
|   |   |   └── id
|   |   └── Fragment Spreads:
|   |       ├── ProtectedFragment
|   |       └── UnprotectedFragment
|   ├── StaticDynamicQueryEdge (fixtures/edge_cases/dynamic_imports.tsx)
|   |   └── Fields:
|   |       ├── user
|   |       ├── id
|   |       └── dynamicField [ThrowOnFieldError ⚠️]
|   └── ValidQueryCommented (fixtures/edge_cases/commented_graphql.ts)
|       ├── Directives:
|       |   └── Catch 🧤
|       └── Fields:
|           ├── user
|           ├── id
|           ├── name
|           └── avatar [ThrowOnFieldError ⚠️]
└── Fragments (13)
    ├── FragmentACircular (fixtures/edge_cases/circular_fragments.ts)
    |   ├── Fields:
    |   |   ├── id
    |   |   └── name
    |   └── Fragment Spreads:
    |       └── FragmentBCircular
    ├── FragmentBCircular (fixtures/edge_cases/circular_fragments.ts)
    |   ├── Fields:
    |   |   ├── email
    |   |   └── bio
    |   └── Fragment Spreads:
    |       └── FragmentACircular
    ├── ProtectedFragment (fixtures/invalid/partial_protection.ts)
    |   ├── Directives:
    |   |   └── Catch 🧤
    |   └── Fields:
    |       ├── sensitiveData [ThrowOnFieldError ⚠️]
    |       └── otherData
    ├── RiskyUserData (fixtures/valid/fragment_level_catch.ts)
    |   ├── Directives:
    |   |   └── Catch 🧤
    |   └── Fields:
    |       ├── sensitiveInfo [ThrowOnFieldError ⚠️]
    |       ├── backupEmail [ThrowOnFieldError ⚠️]
    |       └── internalId
    ├── UnprotectedFragment (fixtures/invalid/partial_protection.ts)
    |   └── Fields:
    |       ├── riskyField [ThrowOnFieldError ⚠️]
    |       └── normalField
    ├── UserAvatar (fixtures/valid/nested_fragments_protected.ts)
    |   ├── Directives:
    |   |   └── Catch 🧤
    |   ├── Fields:
    |   |   └── avatar
    |   └── Fragment Spreads:
    |       └── avatarImage
    ├── UserAvatarUnprotected (fixtures/invalid/unprotected_nested.ts)
    |   ├── Directives:
    |   |   └── ThrowOnFieldError ⚠️
    |   └── Fields:
    |       ├── avatar
    |       └── avatarUrl
    ├── UserBasicInfo (fixtures/valid/nested_fragments_protected.ts)
    |   └── Fields:
    |       ├── id
    |       ├── name
    |       └── email
    ├── UserBasicInfoUnprotected (fixtures/invalid/unprotected_nested.ts)
    |   └── Fields:
    |       ├── id
    |       ├── name [ThrowOnFieldError ⚠️]
    |       └── email
    ├── UserBio (fixtures/valid/nested_fragments_protected.ts)
    |   └── Fields:
    |       ├── bioText
    |       └── bioImage [ThrowOnFieldError ⚠️]
    ├── UserDetails (fixtures/valid/nested_fragments_protected.ts)
    |   ├── Fields:
    |   |   ├── details [Catch 🧤]
    |   |   └── bio [ThrowOnFieldError ⚠️]
    |   └── Fragment Spreads:
    |       ├── UserBasicInfo
    |       ├── UserAvatar
    |       └── UserBio
    ├── UserDetailsUnprotected (fixtures/invalid/unprotected_nested.ts)
    |   ├── Fields:
    |   |   └── bio
    |   └── Fragment Spreads:
    |       ├── UserBasicInfoUnprotected
    |       └── UserAvatarUnprotected
    └── avatarImage (fixtures/valid/nested_fragments_protected.ts)
        ├── Directives:
        |   └── ThrowOnFieldError ⚠️
        └── Fields:
            ├── avatar
            └── avatarUrl
