lib/src/snapshots/gql_safeguard_lib__registry__tests__registry_from_invalid_fixtures.snap
---
source: lib/src/registry.rs
expression: formatted
---
GraphQL Registry
├── Queries (6)
|   ├── GetFullUserUnprotected (fixtures/invalid/unprotected_nested.ts)
|   |   ├── Fields:
|   |   |   └── user
|   |   └── Fragment Spreads:
|   |       └── UserDetailsUnprotected
|   ├── GetUserMixedUnprotected (fixtures/invalid/unprotected_required_throw.ts)
|   |   └── Fields:
|   |       ├── avatar [ThrowOnFieldError ☄️]
|   |       ├── id
|   |       ├── name [RequiredThrow ☄️]
|   |       └── user
|   ├── GetUserPartial (fixtures/invalid/unprotected_required_throw.ts)
|   |   └── Fields:
|   |       ├── email
|   |       ├── id
|   |       ├── name [RequiredThrow ☄️]
|   |       ├── name [RequiredThrow ☄️]
|   |       ├── user [Catch 🧤]
|   |       └── user
|   ├── GetUserProfileUnprotected (fixtures/invalid/missing_catch.tsx)
|   |   └── Fields:
|   |       ├── avatar [ThrowOnFieldError ☄️]
|   |       ├── email
|   |       ├── id
|   |       ├── name
|   |       └── user
|   ├── GetUserUnprotected (fixtures/invalid/unprotected_required_throw.ts)
|   |   └── Fields:
|   |       ├── email
|   |       ├── id
|   |       ├── name [RequiredThrow ☄️]
|   |       └── user
|   └── MixedQuery (fixtures/invalid/partial_protection.ts)
|       ├── Fields:
|       |   ├── id
|       |   └── user
|       └── Fragment Spreads:
|           ├── ProtectedFragment
|           └── UnprotectedFragment
└── Fragments (5)
    ├── ProtectedFragment (fixtures/invalid/partial_protection.ts)
    |   ├── Directives:
    |   |   └── Catch 🧤
    |   └── Fields:
    |       ├── otherData
    |       └── sensitiveData [ThrowOnFieldError ☄️]
    ├── UnprotectedFragment (fixtures/invalid/partial_protection.ts)
    |   └── Fields:
    |       ├── normalField
    |       └── riskyField [ThrowOnFieldError ☄️]
    ├── UserAvatarUnprotected (fixtures/invalid/unprotected_nested.ts)
    |   ├── Directives:
    |   |   └── ThrowOnFieldError ☄️
    |   └── Fields:
    |       ├── avatar
    |       └── avatarUrl
    ├── UserBasicInfoUnprotected (fixtures/invalid/unprotected_nested.ts)
    |   └── Fields:
    |       ├── email
    |       ├── id
    |       └── name [ThrowOnFieldError ☄️]
    └── UserDetailsUnprotected (fixtures/invalid/unprotected_nested.ts)
        ├── Fields:
        |   └── bio
        └── Fragment Spreads:
            ├── UserAvatarUnprotected
            └── UserBasicInfoUnprotected
